# ros2_mobile_lego

./: README.md
alfie/: README.md  package.xml  setup.cfg  setup.py
alfie/config/: robot_description.yaml  robot_hardware_description.urdf
alfie/launch/: brickpi3_motors_launch.py
alfie/lego_assembly/: README.md  final_assembly.md
alfie_hardware/: CMakeLists.txt  alfie_hardware.xml  package.xml
alfie_hardware/include/alfie_hardware/: alfie_hardware.hpp  visibility_control.h
alfie_hardware/src/: alfie_hardware.cpp
kitt/: README.md  package.xml  setup.cfg  setup.py
kitt/config/: robot_description.yaml  robot_hardware_description.urdf  xeox.config.yaml
kitt/launch/: brickpi3_motors_launch.py
kitt/lego_assembly/: README.md  final_assembly.md
kitt_hardware/: CMakeLists.txt  kitt_hardware.xml  package.xml
kitt_hardware/include/kitt_hardware/: kitt_hardware.hpp  visibility_control.h
kitt_hardware/src/: kitt_hardware.cpp
thomas/: README.md  package.xml  setup.py
thomas/config/: robot_description.yaml  robot_hardware_description.urdf
thomas/launch/: brickpi3_motors_launch.py
thomas/lego_assembly/: README.md  base.md  battery_unit.md  final_assembly.md  front_mount.md  motor_unit.md
